add log system